<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

        <EditText
            android:id="@+id/edtNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nama_barang"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edtHarga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_harga_barang"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnPilihDariGaleri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_pilih_gambar"
            android:layout_marginTop="8dp"/>

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="16dp"
            android:contentDescription="Preview Gambar" />

        <Button
            android:id="@+id/btnSimpanBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_simpan_gambar"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnHapusBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_hapus_gambar"
            android:layout_marginTop="8dp"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />
    </LinearLayout>
</ScrollView>