<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Spinner
            android:id="@+id/spinnerBarang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtJumlah"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_jumlah"
            android:inputType="number"/>

        <EditText
            android:id="@+id/edtTanggal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"
            android:hint="@string/hint_pilih_tanggal"
            android:inputType="none"/>

        <Button
            android:id="@+id/btnSimpanTransaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_simpan_transaksi"/>

        <Button
            android:id="@+id/btnHapusTransaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_hapus_transaksi"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:layout_marginTop="16dp" />

    </LinearLayout>



</ScrollView>